--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,19 @@
-    steps:    
+name: Fortify SSC SAST Scan
+ 
+on: 
+  push:
+    branches: [master]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [master]
+  workflow_dispatch:
+jobs:
+  Fortify-SAST-Scan:
+    # Use the appropriate runner for building your source code. 
+    # Use Windows runner for projects that use msbuild. Additional changes to RUN commands will be required..
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Check out source code
         uses: actions/checkout@v4  
       - name: Run ScanCentral SAST & Debricked scan
@@ -36,32 +51,3 @@
           # EXPORT_ACTION: https://scm.my.org/shared-repos/fcli-actions/github-sast-report.yaml
           # EXPORT_EXTRA_OPTS: --on-unsigned=ignore
           # TOOL_DEFINITIONS: https://ftfy.mycompany.com/tool-definitions/v1/tool-definitions.yaml.zip
-
-name: 'Perform SAST scan'
-description: 'Perform a SAST scan on ScanCentral SAST'
-author: 'Fortify'
-runs:
-  using: composite
-  steps:
-    - uses: fortify/github-action/internal/set-ssc-var-defaults@main
-    - uses: fortify/github-action/setup@main
-      with:
-        export-path: false
-        fcli: action-default
-        debricked-cli: ${{ env.DO_DEBRICKED_SCAN=='true' && 'action-default' || 'skip' }}
-    - uses: fortify/github-action/internal/ssc-login@main
-    - uses: fortify/github-action/internal/sc-sast-login@main
-    - uses: fortify/github-action/package@main
-    - uses: fortify/github-action/internal/run-script@main
-      with:
-        script: sc-sast-and-debricked-scan.sh
-      env: 
-        DO_SC_SAST_SCAN: true
-        GITHUB_TOKEN: ${{ github.token }}
-    - if: env.DO_EXPORT == 'true'
-      uses: fortify/github-action/ssc-export@main
-        
-branding:
-  icon: 'shield'
-  color: 'blue'
-
